[package]
name = "server"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2.0-alpha.6", features = ["process", "io"] }
indoc = "0.3.6"
lazy_static = "1.4.0"
log = "0.4.8"
simple_logger = "2.0.0"
base64 = "0.12.3"
